# OnlineTraining

./: .coverage  .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test_db.sqlite3
.github/workflows/: ci-cd.yml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course_alter_lesson_description_and_more.py  0002_initial.py  0003_alter_lesson_course.py  0003_subscription_lesson_alter_course_description.py  0004_course_owner_lesson_owner.py  0005_alter_lesson_link_to_video.py  0006_alter_course_owner_alter_lesson_owner_subscription.py  0007_subscription_created_at.py  0008_course_created_at_course_updated_at.py  0009_lesson_created_at_lesson_updated_at.py  0010_course_price.py  0011_lesson_name_stripe_product_alter_lesson_name.py  0012_course_name_stripe_product.py  0013_rename_name_stripe_product_course_id_stripe_product_and_more.py  0014_alter_course_id_stripe_product_and_more.py
nginx/: Dockerfile  nginx.conf
nginx/html/: index.html
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_alter_payments_method_payment.py  0002_payments.py  0003_remove_user_username.py  0004_payments_owner.py  0005_remove_payments_user_alter_payments_owner.py  0006_alter_payments_owner.py  0007_alter_user_managers.py  (+2 more)
(+2 files in other folders)
