[tool.poetry]
name = "onlinetraining"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
status = "^0.2.5"
celery = "^5.4.0"
coverage = "^7.7.1"
isort = "^6.0.1"
flake8 = "^7.1.2"
drf-yasg = "^1.21.10"
django-cors-headers = "^4.7.0"
stripe = "^11.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[black]
line-length = 119
exclude = ".git"

[isort]
line_length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
